tests/paczka2/big_fuzzy/43027544.err
Error in line 1: Xro S737 76,5
Error in line 2: Xro S884 59,7
Error in line 4: Xro S737 9,9
Error in line 6: Xro S884 9,9
Error in line 13: A587 S737 75,4
Error in line 19: Xro S737 79,1
Error in line 25: gPq S884 5,3
Error in line 28: gPq S737 22,3
Error in line 37: twcQpgSId S737 21,8
Error in line 38: f6QZ A587 97,4
Error in line 44: f6QZ S495 75,6
Error in line 52: twcQpgSId S?95 55,9
Error in line 42: Xro A587 45,7
Error in line 55: f6QZ S884 82,7
Error in line 68: lu2u S737 27,1
Error in line 39: twcQpgSId S495 96,4
Error in line 69: lu2u S495 50,4
Error in line 63: gPq A587 10,9
Error in line 75: twcQpgSId A587 23,33
Error in line 76: twcQpgSId Am87 36,1
Error in line 82: f6QZ S737 3,3
Error in line 83: f6QZ S884 57,4
Error in line 90: Xro S737 78,7
Error in line 108: A587 S495 5,9
Error in line 101: f6QZ S884 8,4
Error in line 70: twcQpgSId S737 72,2
Error in line 104: pfamRHLm S495 96,3
Error in line 122: Xro S884 67,7
Error in line 144: A587 S495 44,5
Error in line 147: A587 S737 98,9
Error in line 153: gPq S737 16,2
Error in line 156: gPq S495 38,1
Error in line 175: Xro S737 44,1
Error in line 180: twcQpgSId A587 221,0
Error in line 201: lu2u S495 97,9
Error in line 199: A587 S737 8,7
Error in line 213: twcQpgSId S737 60,0
Error in line 214: twcQpgSId S884 17,6
Error in line 216: twcQpgSId S737 13,0
Error in line 218: twcQpgSId S495 95,8
Error in line 228: f6QZ S495 32,7
Error in line 236: twcQpgSId S884 2551,4
Error in line 240: f6QZ S495 80,8
Error in line 242: twcQpgSId S495 79,8
